--- a/MezhTransStroy/MezhTransStroy.csproj
+++ b/MezhTransStroy/MezhTransStroy.csproj
@@ -353,6 +353,7 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model1.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Database\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </None>
