--- a/MezhTransStroy/App.config
+++ b/MezhTransStroy/App.config
@@ -7,7 +7,6 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
-  <connectionStrings><add name="СтроительствоEntities" connectionString="metadata=res://*/Database.Model1.csdl|res://*/Database.Model1.ssdl|res://*/Database.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-5DBVH25;initial catalog=Строительство;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
@@ -42,4 +41,4 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<connectionStrings><add name="СтроительствоEntities" connectionString="metadata=res://*/Database.Model1.csdl|res://*/Database.Model1.ssdl|res://*/Database.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-S650NLO\SQLEXPRESS;initial catalog=Строительство;integrated security=True;encrypt=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
